gcp-deployment/cloudbuild/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress
  namespace: dust-app
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - host: dust.ghs.fr
      http:
        paths:
          - path: /webhooks
            pathType: Prefix
            backend:
              service:
                name: connectors-web
                port:
                  number: 3002
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front
                port:
                  number: 3000
